fix : z-index issue on homepage

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@ button {
     color: #FFF;
     background: #F5A623;
     position: relative;
-    z-index: 0;
+    z-index: 15;
     cursor: pointer;
     overflow: hidden;
     font-family: "Orbitron";
